--- a/ea_01.tex
+++ b/ea_01.tex
@@ -16,15 +16,12 @@
 \def\tetel{\large \textbf{Tétel: }}
 \def\defi{\normalsize \textbf{Definíció: }}
 \def\Z{\mathbb{Z}}
-\def\Q{\mathbb{Q}}
 \def\R{\mathbb{R}}
 \def\N{\mathbb{N}}
-\def\sume{\displaystyle\sum_{n=1}^{+\infty}}
-\def\sumn{\displaystyle\sum_{n=0}^{+\infty}}
+\def\Q{\mathbb{Q}}
+\def\sumn{\displaystyle\sum_{n=0}^{\infty}}
 \def\biz{\normalsize{\underline{Bizonyítás:} }\hspace*{0.5cm}}
 \def\tetel{\normalsize \textbf{\underline{Tétel}: }}
-\def\narrow{\underset{n\rightarrow+\infty}{\longrightarrow}}
-\def\limn{\displaystyle\lim_{n\to +\infty}}
 \begin{center}
 	{\LARGE\textbf{Analízis 2.}}\\[0.2cm]
 	
