--- a/ea/ea_11/ea_11.tex
+++ b/ea/ea_11/ea_11.tex
@@ -100,7 +100,7 @@ $\intab f=\int\limits_{a}^{c}f+\int\limits_{c}^{b}f$\\[0.2cm]
 \tetel Ha $f\cab$, ekkor $f\in\rab$\\[0.2cm]
 \biz Ha $f\cab\Rightarrow$ Heine tétel miatt $f$ egyenletesen folytonos, azaz\\[0.2cm]
 $\forall\varepsilon>0,\exists\delta>0,\forall x,y\in[a,b],\abs{x-y}<\delta:
-\abs{f(x)-g(x)}<\varepsilon$\\[0.2cm]
+\abs{f(x)-f(y)}<\varepsilon$\\[0.2cm]
 Legyen $\tau\in\fab$ olyan, hogy $\abs{\tau}<\delta\\[0.2cm]
 \Omega\ftau=\sumi(\sup\limits_{\intv}f-\inf\limits_{\intv}f)(x_i-x_{i-1})=\sumi
 \underbrace{\sup\limits_{x,y\in\intv}\abs{f(x)-f(y)}}_{<\varepsilon}\cdot(x_i-x_{i-1})
